fix: 修复日期范围选择器报错问题，完善部分样式

--- a/src/styles/iview-extend-aiback.css
+++ b/src/styles/iview-extend-aiback.css
@@ -89,3 +89,7 @@
 .ive-table .ivu-btn:last-child {
   margin-right: 0;
 }
+.ive-table .add-button-wrapper {
+  padding: 5px 10px;
+  background-color: #eee;
+}
