feat: 增加inlineTip(行内提示语)

--- a/src/styles/iview-extends2.css
+++ b/src/styles/iview-extends2.css
@@ -67,6 +67,12 @@
   align-items: center;
 }
 
+/* form-item */
+.ive-form-item .inline-tip {
+  color: #858585;
+  margin-left: 5px;
+}
+
 /* 提示图标 */
 .ive-tooltip {
   margin-left: 5px;
