--- a/src/styles/iview-extends2.css
+++ b/src/styles/iview-extends2.css
@@ -1,7 +1,3 @@
-.hide {
-  display: none;
-}
-
 /* 面包屑 */
 .ive-bread-crumb {
   padding: 0 24px;
@@ -42,6 +38,12 @@
 }
 
 /* 编辑表单 */
+.ive-edit-form {
+  margin-right: 1em;
+}
+.ive-edit-form .hide {
+  display: none;
+}
 .ive-edit-form .toggle-button {
   text-align: center;
   cursor: pointer;
@@ -69,6 +71,9 @@
 }
 
 /* form-item */
+.ive-form-item:last-child {
+  margin-bottom: 4px;
+}
 .ive-form-item .inline-tip {
   color: #858585;
   margin-left: 5px;
@@ -93,8 +98,17 @@
 }
 
 /* 模态框 */
-.ivu-modal-body {
+.ive-edit-modal .ivu-modal {
+  top: 10vh;
+}
+.ive-edit-modal .ivu-modal-content {
+  max-height: 80vh;
+  display: flex;
+  flex-direction: column;
+}
+.ive-edit-modal .ivu-modal-content .ivu-modal-body {
   position: relative;
+  overflow: auto;
 }
 
 /* 加载圈 */
@@ -132,13 +146,13 @@
 }
 
 /* 导入数据弹窗 */
-.import-modal .ivu-modal-footer {
+.ive-import-modal .ivu-modal-footer {
   text-align: center;
 }
-.import-modal .file-wrapper {
+.ive-import-modal .file-wrapper {
   line-height: 24px;
 }
-.import-modal .file-wrapper .delete {
+.ive-import-modal .file-wrapper .delete {
   float: right;
 }
 
@@ -147,7 +161,8 @@
   color: #aaa;
 }
 
-.fileUrl {
+/* 上传文件 */
+.ive-upload .fileUrl {
   max-width: 300px;
   overflow: hidden;
   text-overflow: ellipsis;
