--- a/src/styles/iview-extends2.css
+++ b/src/styles/iview-extends2.css
@@ -69,7 +69,9 @@
   display: flex;
   align-items: center;
 }
-
+.ive-edit-form .ivu-input-number {
+  min-width: 50%;
+}
 /* form-item */
 .ive-form-item:last-child {
   margin-bottom: 4px;
