--- a/src/styles/iview-extends2.css
+++ b/src/styles/iview-extends2.css
@@ -16,7 +16,7 @@
 
 /* 条件查询表单 */
 .ive-filter-form {
-  padding: 10px 20px;
+  padding: 20px 20px 10px;
   background: #f5f7f9;
 }
 .ive-filter-form .ivu-btn-primary {
