--- a/src/styles/iview-extends2.css
+++ b/src/styles/iview-extends2.css
@@ -19,6 +19,9 @@
   padding: 20px 20px 10px;
   background: #f5f7f9;
 }
+.ive-filter-form.ivu-form-inline {
+  padding-top: 20px;
+}
 .ive-filter-form .ivu-btn-primary {
   margin-right: 5px;
 }
