--- a/src/styles/iview-extends2.css
+++ b/src/styles/iview-extends2.css
@@ -115,6 +115,12 @@
   position: relative;
   overflow: auto;
 }
+.ive-edit-modal .ivu-modal-footer {
+  text-align: center;
+}
+.ive-edit-modal .ivu-modal-footer button {
+  font-size: 16px;
+}
 
 /* 加载圈 */
 .ive-spin {
