--- a/src/styles/iview-extends2.css
+++ b/src/styles/iview-extends2.css
@@ -153,7 +153,7 @@
 .ive-table .ivu-btn:last-child {
   margin-right: 0;
 }
-.ive-table .add-button-wrapper {
+.ive-table .top-button-wrapper {
   padding: 5px 10px;
   background-color: #f5f7f9;
 }
