--- a/src/styles/iview-extends2.css
+++ b/src/styles/iview-extends2.css
@@ -198,6 +198,13 @@
   color: #373a3c;
   white-space: nowrap;
 }
+.ctx-menu.ctx-menu-left > li.disabled > a {
+  cursor: not-allowed;
+  color: #818a91;
+}
 .ctx-menu.ctx-menu-left > li > a:hover, .ctx-menu.ctx-menu-left > li > a:focus {
   background-color: #f2f2f2;
+}
+.ctx-menu.ctx-menu-left > li.disabled > a:hover {
+  background-color: #fff;
 }
