refactor: 当type为'daterange'或'datetimerange'时优化显示样式

--- a/src/styles/iview-extends2.css
+++ b/src/styles/iview-extends2.css
@@ -7,6 +7,7 @@
 /* 日期范围选择器 */
 .ivu-date-picker.range-picker {
   display: block;
+  width: 100%;
 }
 .ive-date-range .separator {
   margin: 0 10px;
