--- a/src/styles/iview-extends2.css
+++ b/src/styles/iview-extends2.css
@@ -79,6 +79,9 @@
 .ive-edit-form .ivu-input-number {
   min-width: 50%;
 }
+.ive-input-number-wrapper {
+  flex: 1;
+}
 /* form-item */
 .ive-form-item:last-child {
   margin-bottom: 4px;
